--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
   id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
-group 'com.example'
-version '1.0-SNAPSHOT'
+group ='com.example'
+version ='1.0-SNAPSHOT'
 
 repositories {
   mavenCentral()
@@ -16,17 +16,6 @@ repositories {
 }
 application {
   getMainClass().set('agh.ics.oop.World')
-}
-
-ext {
-  junitVersion = '5.9.2'
-}
-
-sourceCompatibility = '17'
-targetCompatibility = '17'
-
-tasks.withType(JavaCompile) {
-  options.encoding = 'UTF-8'
 }
 
 java {
